<resources>
    <string name="app_name">PasswordManager</string>
    <string name="empty_list">There are no passwords saved</string>
    <string name="empty_list_create_button">Create Password Entry</string>
    <string name="password_title_hint">Enter Name</string>
    <string name="password_title">Title: *</string>
    <string name="password_email_hint">Enter Email</string>
    <string name="password_email">Email:</string>
    <string name="password_username">Username: *</string>
    <string name="password_username_hint">Enter Username</string>
    <string name="password_decrypted">Password: *</string>
    <string name="password_decrypted_hint">Enter Password</string>
    <string name="entry_save">Save &amp; Close Password Entry</string>
    <string name="delete_password_entry">Delete Password</string>
    <string name="show_decrypted_password">Decrypt Password</string>
    <string name="new_password_entry">New Password</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="login_entry">Enter Username or Email:</string>
    <string name="login_entry_hint">Enter: </string>
    <string name="sign_up">Sign Up</string>
</resources>